Menu icons added & Contrast Fix

--- a/src/_config.scss
+++ b/src/_config.scss
@@ -18,9 +18,8 @@ $colors: (
   silver: #dddddd
 );
 
-$primary-color: #222;
+$primary-color: #333;
 $secondary-color: map-get($colors, red);
-// $secondary-color: #f00;
 
 @import url("https://fonts.googleapis.com/css?family=Scope+One");
 $primary-font: "Scope One", serif;
