--- a/src/components/Pages/Tech/Tech.scss
+++ b/src/components/Pages/Tech/Tech.scss
@@ -39,12 +39,12 @@
   &--skillsHeading {
     @include skillsHeading;
     background: lighten($primary-color, 5);
-    // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.12), 0 2px 4px 0 rgba(0, 0, 0, 0.08);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.12), 0 2px 4px 0 rgba(0, 0, 0, 0.08);
   }
 
   &--skillsBorder {
     border: none;
-    background: lighten($primary-color, 5);
+    background: #eee;
     border-bottom: 0.3rem solid $secondary-color;
     border-top: 0.3rem solid $secondary-color;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.12), 0 2px 4px 0 rgba(0, 0, 0, 0.08);
@@ -88,10 +88,3 @@
       "do do";
   }
 }
-
-// @include mediaXLarge {
-//   .Tech--skillsGrid {
-//     grid-template-columns: repeat(3, 1fr);
-//     grid-template-areas: "fe be do";
-//   }
-// }
