--- a/src/components/TechIcon/TechIcon.scss
+++ b/src/components/TechIcon/TechIcon.scss
@@ -20,7 +20,7 @@
 
   &--subtitle {
     text-align: center;
-    color: setTextColor($primary-color);
+    color: #111;
   }
 }
 
